--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -211,6 +211,8 @@ Karlsruhe, den 22.12.2017
 \begin{abstract}
 \centerline{\textbf{Abstract}}
 
+\todo{refactor abstract}
+
 Most of the multilevel hypergraph partitioner implements the \emph{FM} heuristic \cite{fiduccia1988linear}
 to improve a given $k$-way partition. In each step, the \emph{FM} algorihm moves a node with
 maximum \emph{gain} from its current block to an other block. The \emph{gain} of a node is
