--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -79,6 +79,8 @@ Since $u \notin S\cup T$, it follows that $|f| = |f'|$.
 \label{img:clique_expansion}
 \end{figure}
 
+The structure we add between all \emph{incoming} and \emph{outgoing} edges is called 
+\emph{maximum bipartite graph} or \emph{biclique}.
 In \ShortT{L} all incoming and outgoing edges of a hypernode $v$ have
 capacities equal to $\infty$. For all $e \in I(v)$ there is an edge from $v$
 to $\incoming{e}$ and from $\outgoing{e}$ to $v$. Consequently, $in(v) = \bigcup_{e \in I(v)} e''$
