--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -213,8 +213,8 @@ Karlsruhe, den 22.12.2017
 
 All state-of-the-art multilevel hypergraph partitioner implements the \emph{FM} 
 heuristic \cite{fiduccia1988linear} to improve a balanced $k$-way partition. 
-In each step, the \emph{FM} algorihm moves a node with maximum \emph{gain} 
-from its current block to an other block according to an objective
+In each step, the \emph{FM} algorithm moves a node with maximum \emph{gain} 
+from its current block to the other block according to an objective
 function. The \emph{gain} of moving a hypernode mainly depends on 
 the state of all incident hyperedges. Therefore, \emph{FM} only incorporates
 \emph{local} information about the problem structure and performs a move
@@ -223,7 +223,7 @@ the state of all incident hyperedges. Therefore, \emph{FM} only incorporates
 Moreover, if we have a large number of moves with equal gain, the quality of the solution 
 is a result of random choices made within the algorithm
 \cite{krishnamurthy1984improved,mann2014formula}. Especially for large hyperedges, we often
-have many moves of vertices which gain is equal to zero if e.g., \emph{cut} is the objective function. \\
+have many moves of vertices which gain is equal to zero if, e.g., the \emph{cut} metric is the objective function. \\
 The well-known \emph{max-flow min-cut} theorem \cite{ford1956maximal} establish an analogy
 between the \emph{global} minimum cut of a network separating two vertices and the maximum flow between
 them. The technique incorporates \emph{global} information about the problem structure and
@@ -239,14 +239,14 @@ algorithm significantly improves the quality of partitions in a multilevel graph
 We generalize many ideas of them such that they are applicable in the multilevel hypergraph 
 partitioning context. We present several techniques to sparsify the state-of-the-art hypergraph 
 flow network representation \cite{lawler1973}. The theoretical results are of independent interest because they
-can be also applied to general flow networks. Our experiments indicates
+can also be applied to general flow networks. Our experiments indicate
 that maximum flow algorithms are up to a factor of $3$ faster on our network in practice.
 Further, we show how to configure a flow problem on a subhypergraph such that a 
-\emph{Max-Flow-Min-Cut} computations improves a balanced $k$-way partition. \\
+\emph{Max-Flow-Min-Cut} computation improves a balanced $k$-way partition. \\
 We tested our new approach
 on a large benchmark set with $3222$ instances. In comparison to $5$ different systems, 
 our new configuration outperforms the tested state-of-the-art hypergraph partitioner on $70\%$ 
-of the instances. In comparison to the latest version of \emph{KaHyPar} our new approach 
+of the instances. In comparison to the latest version of \emph{KaHyPar}, our new approach 
 produces $2\%$ better quality while only incurring a performance slowdown by a factor of $2$. 
 Moreover, our partitioner has a comparable running time to the direct $k$-way version 
 of \emph{hMetis} and outperforms it on $82\%$ of the benchmarks.
