--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -84,7 +84,18 @@ The structure we add between all \emph{incoming} and \emph{outgoing} edges is ca
 In \ShortT{L} all incoming and outgoing edges of a hypernode $v$ have
 capacities equal to $\infty$. For all $e \in I(v)$ there is an edge from $v$
 to $\incoming{e}$ and from $\outgoing{e}$ to $v$. Consequently, $in(v) = \bigcup_{e \in I(v)} e''$
-and $out(v) = \bigcup_{e \in I(v)} e'$. Therefore, we can construct the
+and $out(v) = \bigcup_{e \in I(v)} e'$. Therefore, we can remove $v$ and add a \emph{biclique}
+between $in(v)$ and $out(v)$. A removal of a hypernode induce $d(v)^2$ edges in the new network where
+$d(v)$ is the degree of hypernode $v$. However, we can proof that $d(v)(d(v) - 1)$ edges are
+sufficient to model the problem equivalent. In Appendix \ref{sec:infinite_weight_vertex_separator} we
+proof that we can remove a \emph{infinite} weight node $v$ of a graph by adding a clique between 
+all adjacent nodes of $v$, if we want to find a  minimum-weight $(s,t)$-vertex separator. 
+Using the vertex separator transformation (see Definition \ref{def:vertex_seperator_transformation}) 
+results in a flow network where a removal of a hypernode induce $d(v)(d(v)-1)$ instead of 
+$d(v)^2$ edges. The technique is illustrated in \autoref{img:vertex_separator_transformation}.
+The removed edges are exactly the edges between the same hyperedge nodes. More formally,
+$\forall e \in I(v)$ we can remove edge $(\outgoing{e},\incoming{e})$ from the \emph{biclique}
+of Lemma \ref{lemma:node_removal}. Therefore, we can construct the
 following network with Lemma \ref{lemma:node_removal}:
 
 \begin{definition}
